// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eslint serve get initial error and subsequent error 1`] = `"Unexpected var, use let or const instead."`;

exports[`eslint serve get initial error and subsequent error 2`] = `"<PROJECT_ROOT>/temp/vanilla-ts/src/main.ts:3:1"`;

exports[`eslint serve get initial error and subsequent error 3`] = `
"1 | import { text } from './text'
    2 |
  > 3 | var hello = 'Hello'
      | ^^^^^^^^^^^^^^^^^^^
    4 |
    5 | const rootDom = document.querySelector('#root')!
    6 | rootDom.innerHTML = hello + text"
`;

exports[`eslint serve get initial error and subsequent error 4`] = `
"
  vite v2.3.8 dev server running at:

  > Local: http://localhost:3000/
  > Network: use \`--host\` to expose

  ready in XXXms

 ERROR(ESLint)  Unexpected var, use let or const instead.
 FILE  <PROJECT_ROOT>/temp/vanilla-ts/src/main.ts:3:1

    1 | import { text } from './text'
    2 |
  > 3 | var hello = 'Hello'
      | ^^^^^^^^^^^^^^^^^^^
    4 |
    5 | const rootDom = document.querySelector('#root')!
    6 | rootDom.innerHTML = hello + text

"
`;

exports[`eslint serve get initial error and subsequent error 5`] = `
"HH:MM:SS AM [vite] page reload src/main.ts
 ERROR(ESLint)  Unexpected var, use let or const instead.
 FILE  <PROJECT_ROOT>/temp/vanilla-ts/src/main.ts:3:1

    1 | import { text } from './text'
    2 |
  > 3 | var hello = 'Hello~'
      | ^^^^^^^^^^^^^^^^^^^^
    4 |
    5 | const rootDom = document.querySelector('#root')!
    6 | rootDom.innerHTML = hello + text

"
`;

exports[`eslint serve get initial error and subsequent error 6`] = `
"HH:MM:SS AM [vite] page reload src/text.ts
 ERROR(ESLint)  Unexpected var, use let or const instead.
 FILE  <PROJECT_ROOT>/temp/vanilla-ts/src/main.ts:3:1

    1 | import { text } from './text'
    2 |
  > 3 | var hello = 'Hello~'
      | ^^^^^^^^^^^^^^^^^^^^
    4 |
    5 | const rootDom = document.querySelector('#root')!
    6 | rootDom.innerHTML = hello + text

"
`;

exports[`eslint serve overlay: false 1`] = `
"
  vite v2.3.8 dev server running at:

  > Local: http://localhost:3000/
  > Network: use \`--host\` to expose

  ready in XXXms

 ERROR(ESLint)  Unexpected var, use let or const instead.
 FILE  <PROJECT_ROOT>/temp/vanilla-ts/src/main.ts:3:1

    1 | import { text } from './text'
    2 |
  > 3 | var hello = 'Hello'
      | ^^^^^^^^^^^^^^^^^^^
    4 |
    5 | const rootDom = document.querySelector('#root')!
    6 | rootDom.innerHTML = hello + text

"
`;

exports[`eslint serve overlay: false 2`] = `
"HH:MM:SS AM [vite] page reload src/main.ts
"
`;
